fix lottie rendering and width; fix mobile text wrap; refactor column responsive order view;

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -348,15 +348,11 @@ body {
 }
 
 #my-services-section {
-    padding: 150px 0;
-}
-
-#my-self-tech-section {
-
+    padding: 80px 0 150px;
 }
 
 #media-section {
-    padding: 150px 0;
+    padding: 80px 0 150px;
 
     .carousel {
         height: 100%;
